--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,134 @@
 .logo {
-  max-height: 200px;
+  height: 100px;
+}
+
+.logo2 {
+  width: 100%;
+}
+
+.mapContainer {
+  width: 100%;
+  height: 400px;
+}
+
+#MicrosoftNav, .bm_bottomLeftOverlay, .bm_bottomRightOverlay {
+  display: none;
+}
+
+.vertmaroonline {
+  padding: 5px 0px 5px 10px;
+  border-left: 2px solid #7a003d;
+}
+
+.header {
+  height: 130px;
+  background-color: #c4c4c4;
+  padding: 15px 20px 15px 100px;
+}
+
+.btn-maroon1 {
+  background-color: #7a003d;
+  color: white;
+  border-radius: 30px;
+  width: 130px;
+  margin: 5px;
+}
+
+.btn-maroon2 {
+  background-color: #7a003d;
+  color: white;
+  border-radius: 30px;
+  width: 100px;
+  font-size: 12px;
+}
+
+.maroon.active > * {
+  background-color: white;
+  color: #7a003d;
+}
+
+time {
+  color: #7a003d;
+}
+
+.font18 {
+  font-size: 18px;
+}
+
+.whitespace20 {
+  margin-right: 20px;
+}
+
+.whitespace92 {
+  margin-right: 92px;
+}
+
+.break {
+  height: 100px;
+}
+
+.thanks {
+  font-size: 36px;
+  color: #7a003d;
+  padding: 20px 30px 0px 30px;
+  text-align: center;
+  line-height: normal;
+}
+
+.alignright {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.overlap {
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  padding-right: 30px;
+}
+
+.ride {
+  min-height: 75px;
+  margin: 0px 0px 8px 0px;
+  border: 1px solid black;
+}
+
+.ride > * {
+  font-size: 14px;
+}
+
+.avatar {
+  height: 72px;
+}
+
+.avatarContainer {
+  margin: 0px 10px 0px -10px;
+}
+
+.heart {
+  height: 16px;
+  margin: 8px 0px 0px -24px;
+  position: absolute;
+  z-index: 1;
+}
+
+.pencil {
+  height: 16px;
+  margin: 6px 0px 0px -22px;
+  position: absolute;
+  z-index: 1;
+}
+
+.clone {
+  height: 16px;
+  margin: 28px 0px 0px -22px;
+  position: absolute;
+  z-index: 1;
+}
+
+.trash {
+  height: 16px;
+  margin: 51px 0px 0px -23px;
+  position: absolute;
+  z-index: 1;
 }
